Fix: link's text with class button are not centered

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,7 @@ button,
 {
     display: block;
     font-size: 1.5em;
+    text-align: center;
     color: var(--secondary-color);
     background-color: var(--primary-color);
     padding: 0.5em 1em;
